c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/use_val_in_own_initializer.c
int main(void) {
    int a = 0 && a;
    return a;
}